# anime-parse

./: .gitignore  anime_from_github.py  anime_parse_v_fresh_royal.py  anime_periodic_tasks.py  pyproject.toml  test_anime.py
